# LightRPC

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md  test.sh
code/base/buffer/: buffer.cc  buffer.h
code/base/error_code/: rpc_error_code.h
code/base/log/: log.cc  log.h
code/base/pool/: threadpool.h
code/base/timer/: timer.cc  timer.h
code/network/core/: channel.cc  channel.h  event_loop.cc  event_loop.h
code/network/epoll/: epoller.cc  epoller.h
code/network/tcp/: tcp_client.cc  tcp_client.h  tcp_connection.cc  tcp_connection.h  tcp_server.cc  tcp_server.h
code/protocol/: codec.h  proto_traits.h  rpc.pb.cc  rpc.pb.h
code/protocol/base_proto/: rpc.proto
code/rpc/: rpc_client.cc  rpc_client.h  rpc_server.cc  rpc_server.h  rpc_service.cc  rpc_service.h
docs/: architecture.md  error_code.md
examples/: CMakeLists.txt  client_example.cc  server_example.cc
examples/proto/: math.pb.cc  math.pb.h  math.proto  user.pb.cc  user.pb.h  user.proto
tests/: CMakeLists.txt
tests/base/buffer/: buffer_test.cc
tests/base/log/: log_test.cc
tests/base/pool/: threadpool_test.cc
tests/base/timer/: timer_test.cc
tests/benchmark/: benchmark_client.cc  benchmark_server.cc
tests/benchmark/proto/: benchmark.pb.cc  benchmark.pb.h  benchmark.proto
tests/network/core/: channel_test.cc  event_loop_test.cc
tests/network/epoll/: epoller_test.cc
tests/rpc/: rpc_client_test.cc  rpc_server_test.cc  rpc_service_test.cc
